[package]
name = "web_smart_house"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
mongodb = "2.7.0"
dotenv = "0.15.0"
smart_house = { path = "../smart_house" }
